# stellar-projects

./: .gitignore
allbridge-core/f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/allbridge-core-soroban-contracts-f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/contracts/bridge/: Cargo.toml
allbridge-core/f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/allbridge-core-soroban-contracts-f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/contracts/bridge/src/: contract.rs  lib.rs  other_contracts.rs
allbridge-core/f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/allbridge-core-soroban-contracts-f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/contracts/bridge/src/events/: mod.rs
allbridge-core/f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/allbridge-core-soroban-contracts-f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/contracts/bridge/src/methods/: view.rs
allbridge-core/f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/allbridge-core-soroban-contracts-f9f56b0f8cdd5ad4d3aa63929c4294aaf264535d/contracts/bridge/src/storage/: another_bridge.rs  bridge.rs  data_key.rs  mod.rs  processed_message.rs  sent_message.rs
bondhive/audits_processed/: bondhive.json
bondhive/soroban_contracts-f115457909194201576d1ca0c1134ac6314df4af/: Cargo.toml
excellar/17c344f2ea30646c761dcd6590cdb99c88a44bfe/excellar-contracts-17c344f2ea30646c761dcd6590cdb99c88a44bfe/: Cargo.toml  Makefile
excellar/17c344f2ea30646c761dcd6590cdb99c88a44bfe/excellar-contracts-17c344f2ea30646c761dcd6590cdb99c88a44bfe/token/src/: amm.rs  balance.rs  contract.rs
xcall/abf40ee78b66f2867ea4d3e964e24fcdc6dbbf4b/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/balanced_doller/: Cargo.toml
xcall/abf40ee78b66f2867ea4d3e964e24fcdc6dbbf4b/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/balanced_doller/src/: balanced_dollar.rs  lib.rs  storage_types.rs  xcall_manager_interface.rs
xcall/abf40ee78b66f2867ea4d3e964e24fcdc6dbbf4b/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/balanced_doller/src/tests/: balanced_dollar_test.rs  mod.rs  setup.rs  test.rs
xcall/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/xcall_manager/: Cargo.toml
xcall/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/xcall_manager/src/: states.rs  white_list_actions.rs
xcall/balanced-soroban-contracts-bc20b05d7f94f926dea2c338cc0661e0befa37eb/contracts/xcall_manager/src/tests/: setup.rs
(+261 files in other folders)
