[package]
name = "balanced-dollar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk =  { workspace = true }
soroban-token-sdk = { version = "21.6.0" }
soroban-rlp = { path = "../../libs/soroban-rlp" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }